--- a/front-end/static/index.html
+++ b/front-end/static/index.html
@@ -25,8 +25,7 @@
     <div class="container overlay">
         <div class="jumbotron">
             <h1>Taxi Matcher</h1>
-            <p></p>
-            <!-- <p>This visualization displays the data for one random NYC yellow taxi on a single day in 2013.  See where it operated, how much money it made, and how busy it was over 24 hours.</p><br/> -->
+            <p>This visualization displays the data for one random NYC yellow taxi on a single day in 2013.  See where it operated, how much money it made, and how busy it was over 24 hours.</p><br/>
             <p class = 'text-center'><a id = "begin" class="btn btn-primary btn-lg" role="button">Begin <span class="glyphicon glyphicon-play"></span></a></p>
             <br/>
             <!-- <p style = 'font-size:16px'>A Special Thanks goes out to <a href = "http://www.mapbox.com">Mapbox</a> and <a href = "http://www.heroku.com">Heroku</a> for assistance with covering the surge of activity when this project was first released in 2014. </p>
@@ -103,7 +102,7 @@
       </div>
     </div>
     </div> -->
-    <!-- <div class="dateTimeBox box">
+    <div class="dateTimeBox box">
         <div class = "date"></div>
         <div class = "time"><span class="glyphicon glyphicon-time"></span> <span class = "readableTime"></span></div>
         <div class= "controls">
@@ -111,7 +110,7 @@
             <button type="button" class="btn btn-default btn-xs faster">Faster <span class="glyphicon glyphicon-forward"></span> </button>
         </div>
         <div>Time Factor: <span class = "timeFactor"></span> minutes per second</div>
-    </div> -->
+    </div>
     <div class="legendBox box">
         <div class = "boxHeader"><span class="glyphicon glyphicon-map-marker"></span> Legend</div>
         <div class = 'legendItem'>
